@@ -1,3 +1,7 @@
+2003-09-08  Andrew H. Chatham <pyogg@andrewchatham.com>
+	* pyvorbisfile.c, pyvorbisinfo.c: Fix an exception leak (the
+	exceptions would show up later, even though things worked OK)
+	
 2003-9-01   Andrew H. Chatham <pyogg@andrewchatham.com>
 	* pyvorbisfile.c (py_ov_file_dealloc) Fix a file descriptor leak.
 	
